--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.my.app20160518">
 
     <application
+        android:persistent="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -29,6 +30,8 @@
         <activity android:name=".activity.BankDetailsActivity" />
         <activity android:name=".activity.PoliceDetailsActivity" />
         <activity android:name=".activity.BusinessDetailsActivity" />
+
+        <service android:name=".service.ReceiveMessageService"/>
 
     </application>
 
